# FSCP

./: README.md  cert.pem  key.pem  test.pfx
core-rust/: .gitignore  Cargo.toml
core-rust/crates/server/: Cargo.toml
core-rust/crates/server/src/: conn.rs  handler.rs  helper.rs  internal_message.rs  internal_messages.rs  lib.rs  server_interface.rs  util.rs
core-rust/crates/shared/: Cargo.toml
core-rust/crates/shared/src/: config.rs  lib.rs
core-rust/crates/shared/src/datatypes/: mod.rs  nodes.rs  treebuilder.rs
core-rust/crates/shared/src/errors/: mod.rs
core-rust/crates/shared/src/events/: mod.rs
core-rust/crates/shared/src/remote/: message.rs  mod.rs
core-rust/crates/shared/src/security/: permissions.rs
core-rust/src/: main.rs
