[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
uuid = {version = "1.17.0", features = ["v4", "serde"]}
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
rustls-pemfile = "2.2.0"
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
crossbeam = "0.8.4"
